[package]
name = "openvm-pqsig"
description = "OpenVM library for post-quantum signature verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-pqsig-guest = { workspace = true }
p3-field = { workspace = true }
p3-koala-bear = { workspace = true }
p3-symmetric = { workspace = true }
sha2 = { version = "0.10", default-features = false }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
leansig = { workspace = true }
rand = { workspace = true }

[dev-dependencies]

[features]
default = []
software = []
