[package]
name = "openvm-pqsig-transpiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Transpiler extension for post-quantum signature verification"

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-instructions = { workspace = true }
openvm-transpiler = { workspace = true }
rrs-lib = { workspace = true }
openvm-pqsig-guest = { workspace = true }
openvm-instructions-derive = { workspace = true }
strum = { workspace = true }
